fix(server): use unmodifiable set for static field in LHConstants (#2185)