@@ -4,8 +4,6 @@ import io.littlehorse.sdk.common.proto.ACLAction;
 import io.littlehorse.sdk.common.proto.ACLResource;
 import io.littlehorse.sdk.common.proto.ServerACL;
 import java.time.Duration;
-import java.util.Arrays;
-import java.util.HashSet;
 import java.util.Set;
 
 public class LHConstants {
@@ -31,7 +29,7 @@ public class LHConstants {
     public static final String VAR_ERROR = "VAR_ERROR";
     public static final String TASK_ERROR = "TASK_ERROR";
     public static final String INTERNAL_ERROR = "INTERNAL_ERROR";
-    public static final Set<String> RESERVED_EXCEPTION_NAMES = new HashSet<>(Arrays.asList(
+    public static final Set<String> RESERVED_EXCEPTION_NAMES = Set.of(
             CHILD_FAILURE,
             VAR_SUB_ERROR,
             VAR_MUTATION_ERROR,
@@ -40,7 +38,7 @@ public class LHConstants {
             VAR_ERROR,
             TASK_ERROR,
             INTERNAL_ERROR,
-            USER_TASK_CANCELLED));
+            USER_TASK_CANCELLED);
 
     public static final int DEFAULT_TASK_TIMEOUT_SECONDS = 60;
 
